updated Jwt Utils file